# ChatWaifu_Mobile

./: .gitignore  LICENCE  README.md  build.gradle  settings.gradle  version.gradle
Live2D/: CMakeLists.txt  build.gradle
Live2D/src/SDKRoot/Core/: CHANGELOG.md  LICENSE.md  README.md  RedistributableFiles.txt
Live2D/src/SDKRoot/Core/dll/macos/: Live2DCubismCore.bundle  libLive2DCubismCore.dylib
Live2D/src/SDKRoot/Core/include/: Live2DCubismCore.h
Live2D/src/SDKRoot/Framework/: CHANGELOG.md  LICENSE.md  README.md
Live2D/src/SDKRoot/Framework/Framework/: CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md
Live2D/src/SDKRoot/Framework/Framework/src/: CMakeLists.txt  CubismCdiJson.cpp  CubismCdiJson.hpp  CubismDefaultParameterId.cpp  CubismDefaultParameterId.hpp  CubismJsonHolder.hpp  CubismModelSettingJson.cpp  CubismModelSettingJson.hpp  ICubismModelSetting.hpp  Live2DCubismCore.hpp
Live2D/src/SDKRoot/Framework/src/: CMakeLists.txt  CubismCdiJson.cpp  CubismCdiJson.hpp  CubismFramework.cpp  CubismFramework.hpp  CubismFrameworkConfig.hpp  CubismModelSettingJson.cpp  CubismModelSettingJson.hpp  ICubismAllocator.hpp  ICubismModelSetting.hpp
Live2D/src/SDKRoot/Framework/src/Effect/: CMakeLists.txt  CubismEyeBlink.cpp
Live2D/src/SDKRoot/Framework/src/Id/: CubismIdManager.cpp  CubismIdManager.hpp
Live2D/src/SDKRoot/Framework/src/Math/: CMakeLists.txt  CubismMath.cpp  CubismMath.hpp  CubismMatrix44.hpp  CubismModelMatrix.cpp  CubismModelMatrix.hpp  CubismTargetPoint.cpp  CubismVector2.cpp  CubismVector2.hpp  CubismViewMatrix.hpp
Live2D/src/SDKRoot/Framework/src/Model/: CubismMoc.cpp  CubismMoc.hpp  CubismModel.cpp  CubismModel.hpp  CubismModelUserData.cpp  CubismModelUserData.hpp  CubismModelUserDataJson.cpp  CubismModelUserDataJson.hpp  CubismUserModel.cpp
Live2D/src/SDKRoot/Framework/src/Motion/: ACubismMotion.cpp  ACubismMotion.hpp  CubismExpressionMotion.cpp  CubismMotion.cpp  CubismMotion.hpp  CubismMotionJson.cpp  CubismMotionJson.hpp  CubismMotionManager.cpp  CubismMotionManager.hpp  CubismMotionQueueEntry.cpp  CubismMotionQueueEntry.hpp  CubismMotionQueueManager.cpp  CubismMotionQueueManager.hpp
Live2D/src/SDKRoot/Framework/src/Physics/: CMakeLists.txt  CubismPhysics.cpp  CubismPhysics.hpp  CubismPhysicsInternal.hpp  CubismPhysicsJson.cpp  CubismPhysicsJson.hpp
Live2D/src/SDKRoot/Framework/src/Rendering/: CMakeLists.txt  CubismRenderer.hpp
Live2D/src/SDKRoot/Framework/src/Type/: CMakeLists.txt  CubismBasicType.hpp  csmString.cpp  csmVector.hpp
Live2D/src/SDKRoot/Framework/src/Utils/: CMakeLists.txt  CubismJson.cpp  CubismJson.hpp
Live2D/src/SDKRoot/OpenGL/: README.md
Live2D/src/main/assets/Hiyori/: Hiyori.physics3.json  Hiyori.pose3.json
Live2D/src/main/assets/Hiyori/motions/: Hiyori_m04.motion3.json  Hiyori_m06.motion3.json  Hiyori_m07.motion3.json  Hiyori_m08.motion3.json  Hiyori_m09.motion3.json
Live2D/src/main/assets/Live2DModels/ATRI/: atri_8.cdi3.json  atri_8.moc3  dec-l.motion3.json  dec-r.motion3.json  expression10.exp3.json  expression2.exp3.json  expression3.exp3.json  expression4.exp3.json  expression8.exp3.json
Live2D/src/main/assets/Live2DModels/Amadeus/: Amadeus.model3.json  fix.exp3.json  kurisu.moc3  kurisu.physics3.json
Live2D/src/main/assets/Live2DModels/Hiyori/: Hiyori.moc3  Hiyori.model3.json  Hiyori.userdata3.json
Live2D/src/main/assets/Live2DModels/Yuuka/: ARKitFaceTrackerSettingBeta.json  Yuuka.model3.json  yuuka.cdi3.json  yuuka.moc3  yuuka.physics3.json  yuuka.prprl2d.json
Live2D/src/main/assets/Live2DModels/atri/: atri.model3.json  atri_8.physics3.json  expression1.exp3.json  expression11.exp3.json  expression12.exp3.json  expression13.exp3.json  expression14.exp3.json  expression15.exp3.json  expression16.exp3.json  expression5.exp3.json  expression6.exp3.json  expression7.exp3.json  expression9.exp3.json
Live2D/src/main/cpp/: CMakeLists.txt  JniBridgeC.cpp  JniBridgeC.hpp  LAppAllocator.cpp  LAppAllocator.hpp  LAppDefine.cpp  LAppDefine.hpp  LAppDelegate.cpp  LAppDelegate.hpp  LAppLive2DManager.cpp  LAppLive2DManager.hpp  LAppModel.cpp  LAppModel.hpp  LAppPal.cpp  LAppPal.hpp  LAppSprite.cpp  LAppSprite.hpp  LAppTextureManager.cpp  LAppTextureManager.hpp  LAppView.cpp  LAppView.hpp  TouchManager.cpp  TouchManager.hpp
VITS/src/main/cpp/: CMakeLists.txt  vitsncnn_jni.cpp
VITS/src/main/cpp/asset_manager_api/: manager.cpp  manager.h
VITS/src/main/cpp/audio_process/: audio.cpp  audio.h
VITS/src/main/cpp/fftpack/: CMakeLists.txt  fftpack.cpp  fftpack.h
VITS/src/main/cpp/jpcommon/: jpcommon.c  jpcommon.h  jpcommon_label.c  jpcommon_rule_utf_8.h
VITS/src/main/cpp/mecab/: char_property.h  config.h  connector.cpp  dictionary.h  eval.cpp  feature_index.cpp  feature_index.h  iconv_utils.cpp  libmecab.cpp  mecab.cpp  mecab.h  param.cpp  tagger.cpp  tokenizer.cpp  utils.cpp  viterbi.cpp  viterbi.h  winmain.h  writer.cpp
VITS/src/main/cpp/mecab_api/: api.cpp  api.h
VITS/src/main/cpp/njd/: njd.c  njd.h  njd_node.c
VITS/src/main/cpp/njd2jpcommon/: njd2jpcommon.c  njd2jpcommon_rule_utf_8.h
VITS/src/main/cpp/njd_set_accent_phrase/: njd_set_accent_phrase.c  njd_set_accent_phrase.h  njd_set_accent_phrase_rule_ascii_for_utf_8.h
VITS/src/main/cpp/njd_set_accent_type/: njd_set_accent_type_rule_utf_8.h
VITS/src/main/cpp/njd_set_digit/: njd_set_digit.c  njd_set_digit_rule_ascii_for_utf_8.h  njd_set_digit_rule_utf_8.h
VITS/src/main/cpp/njd_set_long_vowel/: njd_set_long_vowel.c  njd_set_long_vowel.h  njd_set_long_vowel_rule_utf_8.h
VITS/src/main/cpp/njd_set_pronunciation/: njd_set_pronunciation.c  njd_set_pronunciation.h  njd_set_pronunciation_rule_ascii_for_utf_8.h  njd_set_pronunciation_rule_utf_8.h
VITS/src/main/cpp/njd_set_unvoiced_vowel/: njd_set_unvoiced_vowel.c  njd_set_unvoiced_vowel.h
VITS/src/main/cpp/openjtalk/: CMakeLists.txt
VITS/src/main/cpp/text2mecab/: text2mecab.c  text2mecab_rule_ascii_for_utf_8.h
VITS/src/main/cpp/vits/: SynthesizerTrn.cpp  SynthesizerTrn.h  custom_layers.h  utils.cpp  utils.h
VITS/src/main/cpp/wave_utils/: CMakeLists.txt  wave.cpp  wave.h
(+364 files in other folders)
